--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py33, py34, py35, py36, flake8, docs
+envlist = py33, py35, py36, flake8, docs
 skip_missing_interpreters = True
 
 [testenv]
